fixed windows dark mode

--- a/Assets/Styles/Custom.css
+++ b/Assets/Styles/Custom.css
@@ -299,6 +299,17 @@ input::selection {
   border-radius: 5px;
 }
 
+@media (prefers-color-scheme: dark) {
+[os="Windows"] .dark\:win\:shadow-0 {
+  box-shadow: none !important;
+ }
+
+ [os="Windows"] .dark\:win\:contrast-100 {
+  --tw-contrast: contrast(1);
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+ }
+}
+
 [os="Unix"] .linux\:h-titlebar {
   height: env(titlebar-area-height) !important;
 }
